@@ -51,6 +51,7 @@ v16.0.00
 		Attendance: added year group selectors to reports for not present and not onsite
 		Attendance: added ability for students to view their own attendance data for the current year
 		Attendance: added ability to delete attendance with Manage Attendance Logs permission in Attendance by Person
+        Attendance: fixed date format for links in View Daily Attendance
 		Finance: added logging for failed bulk email sends
         Finance: add a Mark as Paid bulk action in Manage Invoices
         Finance: add Credit Card payment type to gibbonPayment table
